// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prop matches default snapshot 1`] = `
<span class="label">
  name:
</span>
<span class="value"
      data-type="string"
>
  DEMO
</span>
`;

exports[`Prop renders a yzdt-watcher when "watchable" is true 1`] = `
<yzdt-watcher uid="_0"
              key="name"
>
</yzdt-watcher>
<span class="label">
  name:
</span>
<span class="value"
      data-type="string"
>
  DEMO
</span>
`;
